2006-10-14  Vivien Malerba <malerba@gnome-db.org>

	* configure.in: 
	* providers/mysql/: applied patches from Stian Skjelstad to
	solve #357502, #357504 and #361802
	* providers/sqlite/gda-sqlite-recordset.c:
	* providers/sqlite/gda-sqlite-provider.c: bug fixes with column type recognition
	* libgda/gda-init.c: improvements in the convenience functions (Daniel)

2006-10-12  Vivien Malerba <malerba@gnome-db.org>

	* libgda/gda-data-model-query.c: fixed bug in gda_data_model_query_get_attributes_at()
	* libgda/gda-data-proxy.c: fixed bug in gda_data_proxy_get_value_attributes()
	* providers/sqlite/sqlite-src: updated to SQLite 3.3.8
	* libgda/gda-dict.c: make sure data types are always synced before anything else
	
2006-10-11  Daniel Espinosa <esodan@gmail.org>
	
	* libgda/gda-init.c, gda-init.h: API change: gda_insert_row_into_table renamed to
	gda_insert_row_into_table_from_string; and added gda_insert_row_into_table wich spect
	for GValue pointers instead strings, this is for powerfull insert row mecanish and 
	avoid miss operations in string to GValue convertions.
	
	Improved Convenient Functions's Error messages 
	
	Added a new convenient function: gda_delete_row_from_table
	
2006-10-08  Vivien Malerba <malerba@gnome-db.org>

	* doc/C: documentation cleanups and improvements

2006-09-30  Vivien Malerba <malerba@gnome-db.org>

	* libgda/gda-init.c: applied a correction from Carlos to force the
	declaration of some data types in GLib.
	* doc/C: doc update

2006-09-29  Daniel Espinosa <esodan@gmail.com>

	* libgda/gda-init.c,libgda.h: Added Convenient functions to easy use of
	libgda
	* gdasharp: improved to fit the new API

2006-09-24  Vivien Malerba <malerba@gnome-db.org>

	* all files: improved API consistency:
	s/get_gda_type/get_g_type/
	s/set_gda_type/set_g_type/
	s/gda_data_model_array_new_with_types/gda_data_model_array_new_with_g_types/
	s/gda_type_to_string/g_type_to_string/
	s/gda_type_from_string/g_type_from_string/
	s/get_nb_gda_types/get_nb_g_types/