@@ -286,7 +286,7 @@
     </chapter>
 
     <chapter id="features">
-      <title>&LIBGDA; fearures</title>
+      <title>&LIBGDA; features</title>
       <para>
 	This section presents the main features of the 2.0 version of Libgda.
       </para>
