@@ -1,3 +1,8 @@
+2006-10-17  Vivien Malerba <malerba@gnome-db.org>
+
+	* providers/mysql/gda-mysql-ddl.c: fixed typo
+	* providers/sqlite/gda-sqlite-handler-bin.c: minor bug fixed
+
 2006-10-14  Vivien Malerba <malerba@gnome-db.org>
 
 	* configure.in: 
